# quickquery

./: README.md  my_database.db  northwind-data.sql  northwind.db  northwind_schema.sql  pyproject.toml
src/quickquery/: crew.py  main.py
src/quickquery/config/: agents.yaml  tasks.yaml
src/quickquery/tools/: __init__.py  custom_tool.py
