[project]
name = "quickquery"
version = "0.1.0"
description = "QuickQuery using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
quickquery = "quickquery.main:run"
run_crew = "quickquery.main:run"
train = "quickquery.main:train"
replay = "quickquery.main:replay"
test = "quickquery.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
